--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy;Design by <a href="https://html5up.net/aerial"> html5up.net </a>.</span>
+				<span class="copyright">&copy;Design by <a href="https://html5up.net/aerial"> test </a>.</span>
 			</footer>
 
 		</div>
