--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-	<title>HELLO HELLEN</title>
+	<title>HELLO </title>
 	<meta charset="utf-8" />
 	<meta name="description" content="Location : 127.0.0.1:1337/ismailtasdelen &amp; U1FgpxieKrOnly5GJg3TiA==">
 	<meta name="keywords"
@@ -32,7 +32,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<h1>Code Factory</h1>
+				<h1>HELEN Factory</h1>
 				<p>DevOps &nbsp;&bull;&nbsp; Test </p>
 				<nav>
 					<ul>
