--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<h1>HELEN Factory</h1>
+				<h1>CODE Factory</h1>
 				<p>DevOps &nbsp;&bull;&nbsp; Test </p>
 				<nav>
 					<ul>
